<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
  <com.google.android.material.textview.MaterialTextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
      android:text="@string/select_filter_type"
      />
  <RadioGroup
      android:id="@+id/filter_type_group"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      >
    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/none_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/none"
        />
    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/allow_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/allow"
        />
    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/deny_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/deny"
        />
  </RadioGroup>
  <com.google.android.material.button.MaterialButton
      android:id="@+id/save"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/menu_save"
      />
</LinearLayout>