<?xml version="1.0" encoding="utf-8"?>

<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header_radio_group"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <RadioButton
        android:id="@+id/do_nothing_radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_nothing_radio_button" />

    <RadioButton
        android:id="@+id/remove_sensor_radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_sensor_radio_button" />

    <RadioButton
        android:id="@+id/mock_sensor_values_radio_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mock_sensor_radio_button" />
</RadioGroup>